<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:src="@drawable/img_number_verification" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dana_fanum_medium"
                android:text="@string/entermobile"

                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_80"
                android:textStyle="bold" />

            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:fontFamily="@font/dana_fanum_medium"
                android:gravity="center"

                android:text="@string/aa"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_60" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:layout_marginBottom="@dimen/spacing_large"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numberPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dana_fanum_medium"
                    android:hint="0912*******"

                    android:inputType="textAutoCorrect|number|textPhonetic|phone"
                    android:maxEms="11"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:minEms="11"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_90"
                    android:textStyle="bold">

                    <requestFocus />

                </com.google.android.material.textfield.TextInputEditText>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sendNumberPhone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_red"
                android:fontFamily="@font/dana_fanum_medium"
                android:text="@string/next"

                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_verificate"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/dana_fanum_medium"
                android:gravity="center"
                android:text="@string/notime"
                android:textColor="@color/grey_40" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
